--- a/.github/workflows/tfdocs.yml
+++ b/.github/workflows/tfdocs.yml
@@ -2,6 +2,10 @@ name: Generate terraform docs
 on:
   - pull_request
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   docs:
     runs-on: ubuntu-latest
