--- a/.github/workflows/tfdocs.yml
+++ b/.github/workflows/tfdocs.yml
@@ -2,6 +2,11 @@ name: Generate terraform docs
 on:
   - pull_request
 
+permissions:
+  pull-requests: write
+  issues: write
+  repository-projects: write
+
 jobs:
   docs:
     runs-on: ubuntu-latest
