--- a/.github/workflows/tfdocs.yml
+++ b/.github/workflows/tfdocs.yml
@@ -3,8 +3,9 @@ on:
   - pull_request
 
 permissions:
-  contents: read
   pull-requests: write
+  issues: write
+  repository-projects: write
 
 jobs:
   docs:
